syntax = "proto3";

package ecommerce;

option java_package = "com.example.online";
option java_multiple_files = true;

enum Category {
    ELECTRONICS = 0;
    EBOOKS = 1;
}

enum Status {
    PAYMENT_RECEIVED = 0;
    SHIPPED = 1;
    OUT_FOR_DELIVERY = 2;
    DELIVERED = 3;
}

message OrderRequest {
    Category orderCategory = 1;
}

message OrderResponse {
    Status orderStatus = 1;
}

service OnlineService {
    // server stream
    rpc placeOrder(OrderRequest) returns (stream OrderResponse);
}